# Town-hall-Project

./: Project file 1 (Town Hall).excalidraw  README.md  index.html  main.css
.github/workflows/: linters.yml  run_test.yml
src/backend/: .gitignore  pyproject.toml
src/backend/app/: main.py
src/backend/app/db/: conn.py  models.py
src/backend/app/routers/: recycle.py
src/backend/app/schemas/: recycle_user.py
src/backend/tests/: __init__.py  conftest.py  test_recycle.py
