[tool.poetry]
name = "town-hall-project"
version = "1.0.0"
description = ""
authors = ["Gene Chuang <kukgene@gmail.com>", "Jay Cho <jaycho1214@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
httpx = "^0.25.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
